# AdvancedProgSimulator

./: CMakeLists.txt  DataReaderServer.cpp  DataReaderServer.h  binaryExpressions.h  command.h  commandGiver.cpp  commandGiver.h  connectCommand.cpp  connectCommand.h  createVarCommand.cpp  createVarCommand.h  entercCommand.cpp  entercCommand.h  exitCommand.h  expression.h  expressionFactory.cpp  expressionFactory.h  ifCommand.cpp  ifCommand.h  lexer.cpp  lexer.h  main.cpp  openDataServer.cpp  openDataServer.h  printCommand.cpp  printCommand.h  runCommand.cpp  runCommand.h  setCommand.cpp  setCommand.h  sleepCommand.cpp  sleepCommand.h  symbolTable.cpp  symbolTable.h  utils.cpp  utils.h  variable.cpp  variable.h  whileCommand.cpp  whileCommand.h
